--- a/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatSentTableViewCell.xib
+++ b/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatSentTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -37,14 +37,6 @@
                             <constraint firstAttribute="width" secondItem="eKA-KN-ulA" secondAttribute="height" multiplier="1:1" id="mmK-Lx-TJq"/>
                         </constraints>
                     </view>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f9g-Mz-ubs" userLabel="cornetUp">
-                        <rect key="frame" x="264" y="32" width="30" height="30"/>
-                        <color key="backgroundColor" red="0.83921568629999999" green="0.91764705879999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="30" id="XFs-e4-cOH"/>
-                            <constraint firstAttribute="width" secondItem="f9g-Mz-ubs" secondAttribute="height" multiplier="1:1" id="rVx-Zi-iME"/>
-                        </constraints>
-                    </view>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5BW-h1-EHl" userLabel="Message">
                         <rect key="frame" x="8" y="32" width="256" height="239.5"/>
                         <color key="backgroundColor" red="0.83921568629999999" green="0.91764705879999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
@@ -53,6 +45,14 @@
                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                         <dataDetectorType key="dataDetectorTypes" link="YES"/>
                     </textView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="f9g-Mz-ubs" userLabel="cornetUp">
+                        <rect key="frame" x="259" y="32" width="30" height="30"/>
+                        <color key="backgroundColor" red="0.83921568629999999" green="0.91764705879999997" blue="0.93725490199999995" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="XFs-e4-cOH"/>
+                            <constraint firstAttribute="width" secondItem="f9g-Mz-ubs" secondAttribute="height" multiplier="1:1" id="rVx-Zi-iME"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="eKA-KN-ulA" firstAttribute="top" secondItem="f9g-Mz-ubs" secondAttribute="top" id="4L7-jK-oj6"/>
@@ -60,11 +60,11 @@
                     <constraint firstItem="5BW-h1-EHl" firstAttribute="leading" secondItem="53N-qh-HZ7" secondAttribute="leading" constant="8" id="MMN-wb-AFL"/>
                     <constraint firstItem="eKA-KN-ulA" firstAttribute="top" secondItem="rZH-nB-dQX" secondAttribute="bottom" constant="8" id="OMs-8s-DTp"/>
                     <constraint firstAttribute="trailing" secondItem="eKA-KN-ulA" secondAttribute="trailing" constant="8" id="PG7-3R-Mug"/>
-                    <constraint firstItem="f9g-Mz-ubs" firstAttribute="leading" secondItem="5BW-h1-EHl" secondAttribute="trailing" id="UOd-bb-GCJ"/>
+                    <constraint firstItem="f9g-Mz-ubs" firstAttribute="leading" secondItem="5BW-h1-EHl" secondAttribute="trailing" constant="-5" id="UOd-bb-GCJ"/>
                     <constraint firstItem="rZH-nB-dQX" firstAttribute="leading" secondItem="53N-qh-HZ7" secondAttribute="leading" constant="8" id="ht4-aG-w4j"/>
                     <constraint firstItem="5BW-h1-EHl" firstAttribute="top" secondItem="rZH-nB-dQX" secondAttribute="bottom" constant="8" id="qkq-3Y-01v"/>
                     <constraint firstItem="rZH-nB-dQX" firstAttribute="top" secondItem="53N-qh-HZ7" secondAttribute="top" constant="8" id="vDJ-bk-Bv7"/>
-                    <constraint firstItem="eKA-KN-ulA" firstAttribute="leading" secondItem="f9g-Mz-ubs" secondAttribute="trailing" constant="8" id="wbu-Uv-QFq"/>
+                    <constraint firstItem="eKA-KN-ulA" firstAttribute="leading" secondItem="f9g-Mz-ubs" secondAttribute="trailing" constant="13" id="wbu-Uv-QFq"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
