--- a/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatSentTableViewCell.xib
+++ b/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatSentTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -24,8 +24,8 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eKA-KN-ulA" userLabel="UserFirstLetter">
                         <rect key="frame" x="302" y="32" width="50" height="50"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="E" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZa-9K-vl9" userLabel="userFirstLetterLabel">
-                                <rect key="frame" x="-302" y="-32" width="17" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="E" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZa-9K-vl9" userLabel="userFirstLetterLabel">
+                                <rect key="frame" x="8" y="8" width="34" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -33,7 +33,11 @@
                         </subviews>
                         <color key="backgroundColor" red="0.30980392159999998" green="0.61176470589999998" blue="0.69411764710000001" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="lZa-9K-vl9" secondAttribute="bottom" constant="8" id="Ag7-wD-Sd5"/>
                             <constraint firstAttribute="width" constant="50" id="Rvd-MK-VYC"/>
+                            <constraint firstAttribute="trailing" secondItem="lZa-9K-vl9" secondAttribute="trailing" constant="8" id="T0L-nU-kqf"/>
+                            <constraint firstItem="lZa-9K-vl9" firstAttribute="leading" secondItem="eKA-KN-ulA" secondAttribute="leading" constant="8" id="aTg-1S-l6Z"/>
+                            <constraint firstItem="lZa-9K-vl9" firstAttribute="top" secondItem="eKA-KN-ulA" secondAttribute="top" constant="8" id="hsN-df-fSg"/>
                             <constraint firstAttribute="width" secondItem="eKA-KN-ulA" secondAttribute="height" multiplier="1:1" id="mmK-Lx-TJq"/>
                         </constraints>
                     </view>
