--- a/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatReceivedShortTableViewCell.xib
+++ b/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatReceivedShortTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecvChatMessageShort" rowHeight="130" id="ZaV-Y8-l5s" customClass="TextChatTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="RecvChatMessageShort" rowHeight="130" id="ZaV-Y8-l5s" customClass="TextChatTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="278" height="130"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ZaV-Y8-l5s" id="4im-1L-Emm">
