--- a/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatReceivedTableViewCell.xib
+++ b/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatReceivedTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="RecvChatMessage" rowHeight="280" id="EF7-f3-rVW" userLabel="RecvChatMessage" customClass="TextChatTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="RecvChatMessage" rowHeight="280" id="EF7-f3-rVW" userLabel="RecvChatMessage" customClass="TextChatTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="360" height="280"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EF7-f3-rVW" id="9d6-74-pns">
