--- a/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatSentTableViewCell.xib
+++ b/iOS-text-chat/TextChatSampleApp/TextChatKit/TextChatSentTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SentChatMessage" rowHeight="314" id="SH8-YU-8Sq" userLabel="SentChatMessage" customClass="TextChatTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="SentChatMessage" rowHeight="314" id="SH8-YU-8Sq" userLabel="SentChatMessage" customClass="TextChatTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="360" height="280"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="SH8-YU-8Sq" id="53N-qh-HZ7">
